syntax = "proto3";

package proxy;

option csharp_namespace = "HookKeylogger.ServerProxy.Rpc";
import "server/messages.proto";

message SendRequest{
	types.CI ci = 1;
}

message SendResponse{
	enum Status {
		OK = 0;
		ERROR = 1;
	}
	Status status = 1;
}

service ServerProxy {
	//Interactions between the proxy client library and the running proxy process
	rpc SendCi(SendRequest) returns (SendResponse) {}
}
